<resources>
    <string name="app_name">UnityApp</string>
    <string name="status_prompt">select status</string>
    <string name="gender_prompt">select gender</string>
    <string name="spectacle_prompt">Spectacle</string>
    <string name="blood_group_prompt">Select Blood Group</string>
    <string name="medical_surgery_prompt">Medical Surgery</string>
    <string name="disability_prompt">Disability</string>
    <string name="caste_prompt">Caste</string>
    <string name="shakha_prompt">Shakha</string>
    <string name="subcaste_prompt">Subcaste</string>
    <string name="gotra_prompt">Gotra</string>
    <string name="rashi_prompt">Rashi</string>
    <string name="gana_prompt">Gana</string>
    <string name="nakshatra_prompt">Nakshatra</string>
    <string name="complexion_prompt">Complexion</string>
    <string name="bodyform_prompt">Body Form</string>
    <string name="occupation_prompt">Occupation</string>
    <string name="organization_type_prompt">Organization Type</string>
    <string name="service_status_prompt">Service Status</string>
    <string-array name="marital_status_list">
        <item>Select Marital Status</item>
        <item>Married</item>
        <item>Single</item>
        <item>Divorcee</item>
        <item>Widower</item>
    </string-array>
    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>

    </string-array>
    <string-array name="yes_no_spinner">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="spinner_smoke">
        <item>Smoke</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="spinner_drink">
        <item>Drink(Alcoholic)</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="disability_spinner">
        <item>Disability</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="medical_surgery_spinner">
        <item>Medical Surgery</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="spectacle_spinner">
        <item>Spectacles</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="complexion_spinner">
        <item>Select Complexion</item>
        <item>Fair</item>
        <item>Wheatish</item>
        <item>Brown</item>
        <item>Dark</item>
    </string-array>
     <string-array name="bodyform_spinner">
        <item>Select Body Form</item>
        <item>Slim</item>
        <item>Athletic</item>
        <item>Medium</item>
        <item>Fat</item>
    </string-array>
   <string-array name="service_status_spinner">
        <item>Select Service Status</item>
        <item>Permenant</item>
        <item>Temporary</item>
        <item>Contract</item>

    </string-array>
    <string-array name="feet_spinner">
        <item>Feet</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="inches_spinner">
        <item>Inches</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="diet_type_spinner">
        <item>Diet Type</item>
        <item>Veg</item>
        <item>Non-Veg</item>
    </string-array>
     <string-array name="occupation_spinner">
        <item>Select Occupation</item>
        <item>Service</item>
        <item>Self Occupied</item>
    </string-array>
   <string-array name="organization_type_spinner">
        <item>Select Organization Type</item>
        <item>Private</item>
        <item>Governmentt</item>
    </string-array>
    <string-array name="shakha_spinner">
        <item>Select Shakha</item>
        <item>Rugvedi</item>
        <item>Yajurvedi</item>
    </string-array>
    <string-array name="subcaste_spinner">
        <item>Select Subcaste</item>
        <item>Gaud Saraswat</item>
        <item>Gaud</item>
        <item>Karhade</item>
        <item>Deshastha</item>
        <item>Kudaldeshkar</item>
        <item>Devrukhe</item>
        <item>Daivadnya</item>
        <item>Chitpavan</item>
        <item>Kokanastha</item>
    </string-array>
    <string-array name="income_spinner">
        <item>Select income</item>
        <item>Upto INR 1 Lakh</item>
        <item>INR 1 Lakh to 2 Lakh</item>
        <item>INR 2 Lakh to 4 Lakh</item>
        <item>INR 4 Lakh to 7 Lakh</item>
        <item>INR 7 Lakh to 10 Lakh</item>
        <item>INR 10 Lakh to 15 Lakh</item>
        <item>INR 15 Lakh to 20 Lakh</item>
        <item>INR 20 Lakh to 30 Lakh</item>
        <item>INR 30 Lakh to 50 Lakh</item>
        <item>INR 50 Lakh and above</item>

    </string-array>
    <string-array name="upshakha_spinner">
        <item>Select Upshakha</item>
        <item>Deshsta</item>
        <item>Deshasta Rugvedi</item>
    </string-array>
    <string-array name="rashi_spinner">
        <item>Select Rashi</item>
        <item>Aries(मेष)</item>
        <item>Taurus(वृषभ)</item>
        <item>Gemini(मिथुन)</item>
        <item>Cancer(कर्क)</item>
        <item>Leo(सिंह)</item>
        <item>Virgo(कन्या)</item>
        <item>Libra(तूळ)</item>
        <item>Scorpio(वृश्चिक)</item>
        <item>Sagittarius(धनु)</item>
        <item>Capricon(मकर)</item>
        <item>Aquirius(कुंभ)</item>
        <item>Pisces(मीन)</item>
    </string-array>
    <string-array name="gana_spinner">
        <item>Select Gana</item>
        <item>Manushya</item>
        <item>Rakshas</item>
        <item>Dev</item>
    </string-array>
    <string-array name="nakshatra_spinner">
        <item>Select Nakshatra</item>
        <item>Ashwini(अश्विनि)</item>
        <item>Bharani(भरणी)</item>
        <item>Krittika(कृत्तिका)</item>
        <item>Rohini(रोहिणी)</item>
        <item>Mrigashīrsha(म्रृगशीर्षा)</item>
        <item>Ardra(आर्द्रा)</item>
        <item>Punarvasu(पुनर्वसु)</item>
        <item>Pushya(पुष्य)</item>
        <item>Ashlesha(आश्लेषा)</item>
        <item>Magha(मघा)</item>
        <item> Purva Phalguni(पूर्व फल्गुनी)</item>
        <item> Uttara Phalguni(उत्तर फल्गुनी)</item>
        <item>Hasta(हस्त)</item>
        <item>Chitra(चित्रा)</item>
        <item>Svati(स्वाति)</item>
        <item>Visakha(विशाखा)</item>
        <item>Anuradha(अनुराधा)</item>
        <item>Jyeshtha(ज्येष्ठा)</item>
        <item>Mula(मूल)</item>
        <item>Uttara Aṣaḍha(उत्तराषाढ़ा)</item>
        <item>Śrāvaṇa(श्र‌वण)</item>
        <item> Dhanishta</item>
        <item>Shatabhisha(शतभिषा)</item>
        <item>Pūrva Bhadrapada(पूर्वभाद्रपदा)</item>
        <item>Uttara Bhadrapada(उत्तरभाद्रपदा)</item>
        <item>Revati(रेवती)</item>
    </string-array>
    <string name="blood_group">Blood Group :</string>
    <string-array name="mangal_spinner">
        <item>Select Mangal</item>
        <item>Weak(सौम्य)</item>
        <item>Nirdosh(निर्दोष)</item>
        <item>Strong(तीव्र)</item>
        <item>No</item>
    </string-array>
    <string-array name="charan_spinner">
        <item>Select Charan</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="spinner_naadi">
        <item>Select Naadi</item>
        <item>Aadya(आद्य)</item>
        <item>Madhya(मध्य)</item>
        <item>Antya(अंत्य)</item>
    </string-array>
    <string name="caste">Caste</string>
    <string name="subcaste">Subcaste</string>
    <string name="shakha">Shakha</string>
    <string name="upshakha">Upshakha</string>
    <string name="gotra">Gotra</string>
    <string name="rashi">Rashi</string>
    <string name="gana">Gana</string>
    <string name="nakshatra">Nakshatra</string>
    <string name="naadi">Naadi</string>
    <string name="charan">Charan</string>
    <string name="mangalik">Mangalik</string>
    <string name="remarks">Remarks</string>
    <string name="min_height">Minimum Height</string>
    <string name="max_height">Maximum Height</string>
    <string name="min_age">Minimum Age</string>
    <string name="max_age">Maximum Age</string>
    <string name="edication">Education</string>
    <string name="income">Income</string>
    <string name="working_location">Working Location</string>
    <string name="other_expectation">Other Expectation</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="alternate_number">Alternate Number</string>
    <string name="email">Email</string>
    <string name="about_us">ABOUT US</string>
    <string name="view_more">VIEW MORE</string>
    <string name="matching_profile">Matching Profile</string>
    <string name="empty_field">This field can not be empty </string>
    <string name="nadi_prompt">Naadi</string>
    <string name="charan_prompt">charan</string>
    <string name="personal_details">Personal Details</string>
    <string name="btn_edit">EDIT</string>
    <string name="full_name">Full Name :</string>
    <string name="birth_date">Birth Date :</string>
    <string name="birth_time">Birth Time :</string>
    <string name="birth_city">Birth City :</string>
    <string name="mother_tongue">Mothertongue :</string>
    <string name="tv_gender">Gender :</string>
    <string name="tv_marrital_status">Marrital status :</string>
    <string name="tv_about_me">About Me :</string>
    <string name="tv_hobbies">Hobbies :</string>
    <string name="physical_details">Physical Details</string>
    <string name="tv_height">Height :</string>
    <string name="tv_weight">Weight :</string>
    <string name="tv_complexion">Complexion :</string>
    <string name="tv_bodyform">Bodyform :</string>
    <string name="tv_spectacles">Spectacles :</string>
    <string name="medical_surgery">Medical Surgery :</string>
    <string name="tv_disability">Disability :</string>
    <string name="tv_other_remarks">Other remarks :</string>
    <string name="eucational_details">Educational Details</string>
    <string name="tv_degree">Degree :</string>
    <string name="tv_passing_year">Passing year :</string>
    <string name="tv_college">College :</string>
    <string name="tv_university">University :</string>
    <string name="tv_stream">Stream :</string>
    <string name="tv_remarks">Remarks :</string>
    <string name="service_details">Service Details</string>
    <string name="tv_occupation">Occupation :</string>
    <string name="tv_organization">Organization :</string>
    <string name="organization_type">Organization Type :</string>
    <string name="tv_sector">Sector :</string>
    <string name="tv_working_city">Working City :</string>
    <string name="tv_designation">Designation :</string>
    <string name="tv_service_status">Service Status :</string>
    <string name="tv_experience">Experience :</string>
    <string name="tv_annual_income">Annual income :</string>
    <string name="diet_details">Diet Details</string>
    <string name="tv_diet_type">Diet type :</string>
    <string name="tv_drink">Drink :</string>
    <string name="tv_smoke">Smoke :</string>
    <string name="family_details">Family Details</string>
    <string name="father_s_name">Father\'s name :</string>
    <string name="father_s_details">Father\'s details :</string>
    <string name="mother_s_name">Mother\'s name :</string>
    <string name="mother_s_details">Mother\'s details :</string>
    <string name="no_of_brothers">No.of Brothers :</string>
    <string name="no_of_sisters">No.of Sisters :</string>
    <string name="brother_s_details">Brother\'s details :</string>
</resources>