<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editMinHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="52dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_rounded_rectangle"
                android:hint="@string/min_height"
                android:minHeight="35dp"
                android:padding="10dp"
                android:textColorHint="#b6b6b6"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editMaxHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="52dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_rounded_rectangle"
                android:hint="@string/max_height"
                android:minHeight="35dp"
                android:padding="10dp"
                android:textColorHint="#b6b6b6"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editMinAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="52dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_rounded_rectangle"
                android:hint="@string/min_age"
                android:minHeight="35dp"
                android:padding="10dp"
                android:textColorHint="#b6b6b6"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editMaxAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="52dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_rounded_rectangle"
                android:hint="@string/max_age"
                android:minHeight="35dp"
                android:padding="10dp"
                android:textColorHint="#b6b6b6"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editSubcaste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="52dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_rounded_rectangle"
                android:hint="@string/subcaste"
                android:minHeight="35dp"
                android:padding="10dp"
                android:textColorHint="#b6b6b6"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editEducation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="52dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_rounded_rectangle"
                android:hint="@string/edication"
                android:minHeight="35dp"
                android:padding="10dp"
                android:textColorHint="#b6b6b6"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="52dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_rounded_rectangle"
                android:hint="@string/income"
                android:minHeight="35dp"
                android:padding="10dp"
                android:textColorHint="#b6b6b6"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editWorkingLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="52dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_rounded_rectangle"
                android:hint="@string/working_location"
                android:minHeight="35dp"
                android:padding="10dp"
                android:textColorHint="#b6b6b6"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editOtherExp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="52dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_rounded_rectangle"
                android:hint="@string/other_expectation"
                android:minHeight="35dp"
                android:padding="10dp"
                android:textColorHint="#b6b6b6"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="52dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_btn_shape"
                android:text="Save"
                android:textColor="#ffffff"
                android:textSize="15sp" />

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</LinearLayout>