<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/details_background_rectangle"
    android:scrollbars="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:padding="15dp"
                            android:text="@string/physical_details"
                            android:textColor="#242926"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/btn_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerInParent="true"
                            android:layout_marginRight="10dp"
                            android:drawableLeft="@drawable/ic_edit"
                            android:gravity="center_vertical"
                            android:text="@string/btn_edit"
                            android:textColor="@color/colorAccent" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:padding="15dp"
                        android:text="@string/tv_height"
                        android:textColor="#929292"
                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/tv_height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:textColor="#242926"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:padding="15dp"
                        android:text="@string/tv_weight"
                        android:textColor="#929292"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:textColor="#242926"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:padding="15dp"
                        android:text="@string/tv_complexion"
                        android:textColor="#929292"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_complexion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:textColor="#242926"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:padding="15dp"
                        android:text="@string/tv_bodyform"
                        android:textColor="#929292"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_body_form"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:textColor="#242926"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:padding="15dp"
                        android:text="@string/tv_spectacles"
                        android:textColor="#929292"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_spects"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:textColor="#242926"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:padding="15dp"
                        android:text="@string/blood_group"
                        android:textColor="#929292"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_blood_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:textColor="#242926"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:padding="15dp"
                        android:text="@string/medical_surgery"
                        android:textColor="#929292"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_medical_surgery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:textColor="#242926"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:padding="15dp"
                        android:text="@string/tv_disability"
                        android:textColor="#929292"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_disability"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:textColor="#242926"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:padding="15dp"
                        android:text="@string/tv_other_remarks"
                        android:textColor="#929292"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_other_remarks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="34.3sp"
                        android:textColor="#242926"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
